--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
   <div class="wrap" role="main" aria-label="个人自我介绍">
     <aside class="profile" aria-label="个人信息">
       <div class="avatar" title="头像">
-        <img src="https://github.com/whtthw666.png" alt="头像 - whtthw666">
+        <img src="https://github.com/DailyWu666.png" alt="头像 - DailyWu666">
       </div>
       <div style="text-align:center">
         <h1>Daily无</h1>
@@ -151,7 +151,7 @@
       </div>
 
       <div class="links" style="width:100%">
-        <a href="https://github.com/whtthw666" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://github.com/DailyWu666" target="_blank" rel="noopener">GitHub</a>
         <a href="mailto:scw333888@163.com">Email</a>
         <a href="#" class="ghost">简历（下载）</a>
       </div>
@@ -200,7 +200,7 @@
         </div>
 
         <div class="cta">
-          <a class="btn" href="https://github.com/whtthw666" target="_blank" rel="noopener">查看我的 GitHub</a>
+          <a class="btn" href="https://github.com/DailyWu666" target="_blank" rel="noopener">查看我的 GitHub</a>
           <a class="btn ghost" href="mailto:scw333888@163.com">联系我</a>
         </div>
       </div>
